@@ -9,4 +9,8 @@ class UsersController < ApplicationController
     user_session['last_request_at'] = 31.minutes.ago.utc
     render :text => 'User will be expired on next request'
   end
+
+  def show
+    render :text => current_user.id.to_s
+  end
 end
